@@ -1,3 +1,10 @@
+2007-06-29  Paul Brook  <paul@codesourcery.com>
+
+	* elf32-arm.c (bfd_elf32_arm_process_before_allocation): Suppress
+	call veneers for call relocations against undefined symbols.
+	(elf32_arm_final_link_relocate): Turn call to undefined symbol
+	into a jump to the next instruction.
+
 2007-06-29  Michael Snyder  <msnyder@svkmacdonelllnx>
 
 	* bfd.c (bfd_demangle): Plug memory leak (Coverity).
